Merged PR 1178: feat(java): java 25